Layout fixes (#494)
* The layout fix (footer not stretched to the bottom)

* History icon fix

* Add menu hover & active states

--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -6,10 +6,13 @@
   background: linear-gradient(334deg, #fafafa -0.91%, #ebf0ff 48.81%, #fafafa 99.52%);
   min-height: 100vh;
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .content {
   display: flex;
+  flex-grow: 1;
 }
 
 .main {
